force-app/main/default/objects/Inventory_Log__c/Inventory_Log__c.object-meta.xml
<CustomObject>
    <description>This object stores information regarding the transfer of inventory between locations.</description>
    <label>Inventory Log</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Inventory Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>