force-app/main/default/objects/Inventory_Log__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory Logs</relationshipLabel>
    <relationshipName>Inventory_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>