force-app/main/default/objects/Inventory_Log__c/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is where the inventory originated from.</description>
    <inlineHelpText>Where did this inventory come from?</inlineHelpText>
    <label>Departure Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Location must be inventory location.</errorMessage>
        <filterItems>
            <field>Location.IsInventoryLocation</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Inventory Logs</relationshipLabel>
    <relationshipName>Inventory_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>