force-app/main/default/objects/Inventory_Log__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Location must be inventory location.</errorMessage>
        <filterItems>
            <field>Location.IsInventoryLocation</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Inventory Logs (Destination Location)</relationshipLabel>
    <relationshipName>Inventory_Logs1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>